# smart_cart_ws

./: .gitignore  README.md
docs/: README.md  SYSTEM_GUIDE.md
firmware/opencr_lid/: README.md
firmware/opencr_pan_tilt/: opencr_pan_tilt.ino
firmware/opencr_servo/: platformio.ini
firmware/opencr_servo/src/: main.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sc_cpp/share/sc_cpp/: package.bash  package.zsh
log/: latest_build
smart_cart_ws/: .gitignore  README.md  build.sh  requirements.txt  smart_cart.code-workspace
smart_cart_ws/docs/: yolov8s_integration.md
smart_cart_ws/firmware/opencr_lid/: opencr_lid.ino
smart_cart_ws/firmware/opencr_pan_tilt/: README.md
smart_cart_ws/firmware/opencr_servo/include/: servo_config.h
smart_cart_ws/src/sc_bringup/: CMakeLists.txt  package.xml
smart_cart_ws/src/sc_bringup/config/: classifier_params.yaml  follow_params.yaml  lid_params.yaml  nav2_params.yaml  safety_params.yaml  servo_params.yaml  tracker_params.yaml  webcam_params.yaml
smart_cart_ws/src/sc_bringup/launch/: README.md  bringup.launch.py  navigation.launch.py  record.launch.py  robot.launch.py  sim.launch.py
smart_cart_ws/src/sc_bringup/maps/: README.md
smart_cart_ws/src/sc_bringup/urdf/: smart_cart.urdf.xacro
smart_cart_ws/src/sc_bringup/worlds/: store.world
smart_cart_ws/src/sc_cpp/: CMakeLists.txt  package.xml
smart_cart_ws/src/sc_cpp/include/sc_cpp/: follow_controller.hpp  kalman_filter.hpp  lid_controller.hpp  obstacle_avoidance.hpp  pan_tilt_controller.hpp  safety_monitor.hpp  status_publisher.hpp
smart_cart_ws/src/sc_cpp/src/: follow_controller.cpp  kalman_filter.cpp  lid_controller.cpp  obstacle_avoidance.cpp  pan_tilt_controller.cpp  safety_monitor.cpp  status_publisher.cpp
smart_cart_ws/src/sc_gui/: package.xml  setup.py
smart_cart_ws/src/sc_gui/sc_gui/: cart_gui.py  main.py  robot_gui.py  waypoint_manager.py
smart_cart_ws/src/sc_interfaces/: CMakeLists.txt  package.xml
smart_cart_ws/src/sc_interfaces/msg/: BasketEvent.msg  PaymentEvent.msg  PersonBbox.msg  TrackerState.msg  Waypoint.msg  WaypointList.msg
smart_cart_ws/src/sc_python/: package.xml  setup.cfg  setup.py
smart_cart_ws/src/sc_python/sc_python/: basket_vision.py  item_classifier.py  person_tracker.py
smart_cart_ws/src/sc_python/sc_python/utils/: deepsort_tracker.py
src/sc_bringup/: CMakeLists.txt
src/sc_bringup/config/: basket_vision_params.yaml  classifier_params.yaml  follow_params.yaml  webcam_params.yaml
src/sc_bringup/launch/: localization.launch.py  pc.launch.py  rpi.launch.py  sim.launch.py
src/sc_bringup/maps/: map_cleaned.pgm
src/sc_bringup/rviz/: smart_cart.rviz
src/sc_cpp/: CMakeLists.txt
src/sc_cpp/include/sc_cpp/: follow_controller.hpp  lid_controller.hpp  pan_tilt_controller.hpp  safety_monitor.hpp  status_publisher.hpp
src/sc_cpp/src/: follow_controller.cpp  lid_controller.cpp  pan_tilt_controller.cpp  safety_monitor.cpp  status_publisher.cpp
src/sc_gui/: package.xml  setup.cfg
src/sc_gui/sc_gui/: main.py
src/sc_interfaces/: CMakeLists.txt
src/sc_interfaces/msg/: CartStatus.msg  ItemDetected.msg  ServoControl.msg
src/sc_interfaces/srv/: SaveWaypoints.srv
src/sc_python/: setup.py
