<?xml version="1.0"?>
<package format="3">
  <name>sc_gui</name>
  <version>0.1.0</version>
  <description>Smart Cart 관제 GUI (PyQt5 + Flask 결제 + ROS 토픽 통합)</description>
  <maintainer email="team@smartcart.local">SmartCart Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sc_interfaces</depend>
  <depend>sc_bringup</depend>

  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
