<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>sc_python</n>
  <version>0.1.0</version>
  <description>
    Smart Cart Python AI 노드 패키지.
    person_tracker: USB 웹캠 → YOLOv8 + DeepSORT → /person_bbox
    item_classifier: RPi 카메라 → Roboflow 학습 모델 → /item_detected
  </description>
  <maintainer email="team@smartcart.local">SmartCart Team (Python 담당)</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sc_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
